--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 teloxide = { version = "0.13", features = ["macros"] }
-ollama-rs = { version = "0.2", features = ["stream"] }
+ollama-rs = { git = "https://github.com/ShenMian/ollama-rs", features = [
+    "stream",
+] }
 
 tokio = { version = "1.8", features = ["full"] }
 futures = "0.3"
