--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "llm-bot"
 version = "0.1.0"
+authors = ["ShenMian <sms_school@outlook.com>"]
+license = "Apache-2.0"
 edition = "2021"
 
 [dependencies]
