--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 teloxide = { version = "0.13", features = ["macros", "rustls"] }
-ollama-rs = { git = "https://github.com/ShenMian/ollama-rs", features = [
+ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs", features = [
     "stream",
 ] }
 
