--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,7 @@ edition = "2021"
 
 [dependencies]
 teloxide = { version = "0.13", features = ["macros", "rustls"] }
-ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs", features = [
-    "stream",
-    "rustls",
-] }
+async-openai = "0.29.0"
 
 tokio = { version = "1.43", features = ["full"] }
 futures = "0.3"
